# simple-gamepad-proto

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
.agent/workflows/: schematics-update.md
docs/research/: MH4_FIREBIED.md
research/: MH4_FIREBIED.md
schematics/: README.md
src/: lcd_i2c.cpp  lcd_i2c.h  main.cpp  tusb_config.h  usb_descriptors.c
